query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-delete-with-filter.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-delete-with-filter.json
snapshot_kind: text
---
dataMap affectedRows
execute «DELETE FROM "public"."Location" WHERE
         ST_DWithin("public"."Location"."position", ST_SetSRID(ST_MakePoint($1,
         $2), $3), $4)»
params [const(Float(BigDecimal("0"))), const(Float(BigDecimal("0"))),
        const(BigInt(4326)), const(Float(BigDecimal("1000")))]
