query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-filter-and-scalar-filter.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-filter-and-scalar-filter.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    position: Geometry(point)? (position)
}
query «SELECT "t0"."id", "t0"."position" FROM "public"."Location" AS "t0" WHERE
       (ST_DWithin("t0"."position", ST_SetSRID(ST_MakePoint($1, $2), $3), $4)
       AND "t0"."id" > $5)»
params [const(Float(BigDecimal("0"))), const(Float(BigDecimal("0"))),
        const(BigInt(4326)), const(Float(BigDecimal("50000"))),
        const(BigInt(100))]
