query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-filter-within.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-filter-within.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    position: Geometry(point)? (position)
}
query «SELECT "t0"."id", "t0"."position" FROM "public"."Location" AS "t0" WHERE
       ST_Within("t0"."position", ST_GeomFromText($1, $2))»
params [const(String("POLYGON((0 0, 0 2, 2 2, 2 0, 0 0))")),
        const(BigInt(4326))]
