query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-find-many.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-find-many.json
---
dataMap {
    id: Int (id)
    position: Geometry(point) (position)
}
query «SELECT "t0"."id", "t0"."position" FROM "public"."Location" AS "t0"»
params []
