query-compiler/query-compiler/tests/snapshots/queries__queries@geometry-multiple-orderby.json.snap
---
source: query-compiler/query-compiler/tests/queries.rs
expression: pretty
input_file: query-compiler/query-compiler/tests/data/geometry-multiple-orderby.json
snapshot_kind: text
---
dataMap {
    id: Int (id)
    position: Geometry(point)? (position)
}
query «SELECT "t0"."id", "t0"."position" FROM "public"."Location" AS "t0" ORDER
       BY ST_Distance(geography("t0"."position"),
       geography(ST_SetSRID(ST_MakePoint($1, $2), $3))) ASC, "t0"."id" DESC»
params [const(Float(BigDecimal("0"))), const(Float(BigDecimal("0"))),
        const(BigInt(4326))]
